--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "React Native Midtrans",
-  "version": "0.0.1",
+  "name": "react-native-midtrans",
+  "version": "0.0.2",
   "author": "Ega Radiegtya. (Originally Developed by my team @mucasali)",
-  "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "keywords": [
+   "react-native",
+   "react-component",
+   "react-native-component",
+   "react",
+   "mobile",
+   "android",
+   "midtrans",
+   "sdk",
+   "payment",
+   "gateway",
+   "credit-card",
+   "debit",
+   "bank"
+ ],
   "repository": {
     "type": "git",
     "url": "https://github.com/radiegtya/react-native-midtrans"
